--- a/doxygen docs/latex/tetris_scoring_8c.tex
+++ b/doxygen docs/latex/tetris_scoring_8c.tex
@@ -1,15 +1,17 @@
-\doxysection{C\+:/\+Users/pontet.APOLLO2/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Scoring.c File Reference}
-\hypertarget{tetris_scoring_8c}{}\label{tetris_scoring_8c}\index{C:/Users/pontet.APOLLO2/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.c@{C:/Users/pontet.APOLLO2/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.c}}
+\doxysection{C\+:/\+Users/kerfriden/\+Documents/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Scoring.c File Reference}
+\hypertarget{tetris_scoring_8c}{}\label{tetris_scoring_8c}\index{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.c@{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.c}}
 
 
 \+: Program for Tetris Scoring system  
 
 
-{\ttfamily \#include "{}tetris\+Scoring.\+h"{}}\newline
+{\ttfamily \#include "{}../tetris\+Game/tetris\+Scoring.\+h"{}}\newline
 {\ttfamily \#include "{}ssd1306\+\_\+fonts.\+h"{}}\newline
 {\ttfamily \#include "{}ssd1306.\+h"{}}\newline
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
+{\ttfamily \#include "{}string.\+h"{}}\newline
 {\ttfamily \#include "{}tetris\+Leveling.\+h"{}}\newline
+{\ttfamily \#include "{}user\+Oled.\+h"{}}\newline
 \doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
