--- a/doxygen docs/latex/tetris_start_menu_8h_source.tex
+++ b/doxygen docs/latex/tetris_start_menu_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{tetris\+Start\+Menu.\+h}
-\hypertarget{tetris_start_menu_8h_source}{}\label{tetris_start_menu_8h_source}\index{C:/Users/pontet.APOLLO2/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.h@{C:/Users/pontet.APOLLO2/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.h}}
+\hypertarget{tetris_start_menu_8h_source}{}\label{tetris_start_menu_8h_source}\index{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.h@{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.h}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{/*}}
@@ -15,7 +15,7 @@
 \DoxyCodeLine{00011\ \textcolor{preprocessor}{\#include\ "{}main.h"{}}}
 \DoxyCodeLine{00012\ \textcolor{preprocessor}{\#include\ "{}ssd1306.h"{}}}
 \DoxyCodeLine{00013\ }
-\DoxyCodeLine{00014\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{tetris_start_menu_8c_a1b46f95cb32d9af8eca89bad57d18210}{tetrisBordureDecor}}(SSD1306\_COLOR);}
+\DoxyCodeLine{00014\ \textcolor{keywordtype}{void}\ tetrisBordureDecor(SSD1306\_COLOR);}
 \DoxyCodeLine{00015\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{tetris_start_menu_8c_a47a98462681ee054d7eaa6f08ba31b47}{tetrisStartMenu}}(SSD1306\_COLOR);}
 \DoxyCodeLine{00016\ }
 \DoxyCodeLine{00017\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ TETRISSTARTMENU\_H\_\ */}\textcolor{preprocessor}{}}
