--- a/doxygen docs/latex/struct_t_e_t_r_a_m_i_n_o___a_t_m.tex
+++ b/doxygen docs/latex/struct_t_e_t_r_a_m_i_n_o___a_t_m.tex
@@ -24,4 +24,4 @@ Structure to locate the current tetramino in the game.
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-C\+:/\+Users/pontet.\+APOLLO2/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8c}{tetris\+Game.\+c}}\end{DoxyCompactItemize}
+C\+:/\+Users/kerfriden/\+Documents/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8c}{tetris\+Game.\+c}}\end{DoxyCompactItemize}
