--- a/doxygen docs/latex/tetris_leveling_8c.tex
+++ b/doxygen docs/latex/tetris_leveling_8c.tex
@@ -1,11 +1,11 @@
-\doxysection{C\+:/\+Users/pontet.APOLLO2/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Leveling.c File Reference}
-\hypertarget{tetris_leveling_8c}{}\label{tetris_leveling_8c}\index{C:/Users/pontet.APOLLO2/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c@{C:/Users/pontet.APOLLO2/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c}}
+\doxysection{C\+:/\+Users/kerfriden/\+Documents/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Leveling.c File Reference}
+\hypertarget{tetris_leveling_8c}{}\label{tetris_leveling_8c}\index{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c@{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c}}
 
 
 \+: Program for Tetris Leveling system  
 
 
-{\ttfamily \#include "{}tetris\+Leveling.\+h"{}}\newline
+{\ttfamily \#include "{}../tetris\+Game/tetris\+Leveling.\+h"{}}\newline
 \doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
