--- a/doxygen docs/latex/tetris_start_menu_8c.tex
+++ b/doxygen docs/latex/tetris_start_menu_8c.tex
@@ -1,17 +1,14 @@
-\doxysection{C\+:/\+Users/pontet.APOLLO2/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Start\+Menu.c File Reference}
-\hypertarget{tetris_start_menu_8c}{}\label{tetris_start_menu_8c}\index{C:/Users/pontet.APOLLO2/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.c@{C:/Users/pontet.APOLLO2/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.c}}
+\doxysection{C\+:/\+Users/kerfriden/\+Documents/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Start\+Menu.c File Reference}
+\hypertarget{tetris_start_menu_8c}{}\label{tetris_start_menu_8c}\index{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.c@{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.c}}
 
 
 \+: Program to draw the Menu  
 
 
-{\ttfamily \#include "{}tetris\+Start\+Menu.\+h"{}}\newline
+{\ttfamily \#include "{}../tetris\+Game/tetris\+Start\+Menu.\+h"{}}\newline
 \doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-\Hypertarget{tetris_start_menu_8c_a1b46f95cb32d9af8eca89bad57d18210}\label{tetris_start_menu_8c_a1b46f95cb32d9af8eca89bad57d18210} 
-void {\bfseries tetris\+Bordure\+Decor} (SSD1306\+\_\+\+COLOR color)
-\begin{DoxyCompactList}\small\item\em Draw the decor. \end{DoxyCompactList}\item 
 \Hypertarget{tetris_start_menu_8c_a47a98462681ee054d7eaa6f08ba31b47}\label{tetris_start_menu_8c_a47a98462681ee054d7eaa6f08ba31b47} 
 void {\bfseries tetris\+Start\+Menu} (SSD1306\+\_\+\+COLOR color)
 \begin{DoxyCompactList}\small\item\em Draw the start menu. \end{DoxyCompactList}\end{DoxyCompactItemize}
