--- a/doxygen docs/latex/index.tex
+++ b/doxygen docs/latex/index.tex
@@ -3,4 +3,6 @@
 \hypertarget{index_Introduction}{}\doxysection{\texorpdfstring{Introduction}{Introduction}}\label{index_Introduction}
 Ce jeu de Tetris a entièrement été réalisé par Adrien Kerfriden, Lou Vacher et Pierre Pontet.
 
-Il a été conçu pour fonctionner sur une carte STM32 L031\+K6. 
+Il a été conçu pour fonctionner sur une carte STM32 L031\+K6.
+
+Il suffit de brancher 5 boutons, sur les broches PA1, PA3, PA4, PA6 et PA7. 
