--- a/doxygen docs/latex/tetris_game_8h_source.tex
+++ b/doxygen docs/latex/tetris_game_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{tetris\+Game.\+h}
-\hypertarget{tetris_game_8h_source}{}\label{tetris_game_8h_source}\index{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisGame.h@{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisGame.h}}
+\hypertarget{tetris_game_8h_source}{}\label{tetris_game_8h_source}\index{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisGame.h@{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisGame.h}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{/*}}
