--- a/doxygen docs/latex/tetris_leveling_8c.tex
+++ b/doxygen docs/latex/tetris_leveling_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/kerfriden/\+Documents/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Leveling.c File Reference}
-\hypertarget{tetris_leveling_8c}{}\label{tetris_leveling_8c}\index{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c@{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c}}
+\doxysection{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Leveling.c File Reference}
+\hypertarget{tetris_leveling_8c}{}\label{tetris_leveling_8c}\index{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c@{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c}}
 
 
 \+: Program for Tetris Leveling system  
@@ -9,15 +9,15 @@
 \doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-int \mbox{\hyperlink{tetris_leveling_8c_a5e3d2774fadf7f769e1d4b5b50ca0752}{get\+Level\+Number}} ()
+uint8\+\_\+t \mbox{\hyperlink{tetris_leveling_8c_acd58cbe3d18d5faa6ccd3a084881c296}{get\+Level\+Number}} ()
 \begin{DoxyCompactList}\small\item\em Return level\+Number. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{tetris_leveling_8c_aeba70d21eab6f37620dbcc60a9de542a}{new\+Level\+Calculate}} (int \+\_\+number\+Of\+Line\+Completed)
+void \mbox{\hyperlink{tetris_leveling_8c_ae72ba64668f34137e4fe3886600662fe}{new\+Level\+Calculate}} (uint8\+\_\+t \+\_\+number\+Of\+Line\+Completed)
 \begin{DoxyCompactList}\small\item\em Verify and change level\+Number. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsubsection*{Variables}
 \begin{DoxyCompactItemize}
 \item 
-\Hypertarget{tetris_leveling_8c_a4a8fa32f8a3fe73bcc8665b2283a51ad}\label{tetris_leveling_8c_a4a8fa32f8a3fe73bcc8665b2283a51ad} 
-int {\bfseries level\+Number} = 0
+\Hypertarget{tetris_leveling_8c_aed8ac595ddce3f58d43e7f162d123de4}\label{tetris_leveling_8c_aed8ac595ddce3f58d43e7f162d123de4} 
+uint8\+\_\+t {\bfseries level\+Number} = 0
 \end{DoxyCompactItemize}
 
 
@@ -30,11 +30,11 @@ int {\bfseries level\+Number} = 0
 
 
 \doxysubsection{Function Documentation}
-\Hypertarget{tetris_leveling_8c_a5e3d2774fadf7f769e1d4b5b50ca0752}\label{tetris_leveling_8c_a5e3d2774fadf7f769e1d4b5b50ca0752} 
+\Hypertarget{tetris_leveling_8c_acd58cbe3d18d5faa6ccd3a084881c296}\label{tetris_leveling_8c_acd58cbe3d18d5faa6ccd3a084881c296} 
 \index{tetrisLeveling.c@{tetrisLeveling.c}!getLevelNumber@{getLevelNumber}}
 \index{getLevelNumber@{getLevelNumber}!tetrisLeveling.c@{tetrisLeveling.c}}
 \doxysubsubsection{\texorpdfstring{getLevelNumber()}{getLevelNumber()}}
-{\footnotesize\ttfamily int get\+Level\+Number (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily uint8\+\_\+t get\+Level\+Number (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
 
 
@@ -45,11 +45,11 @@ Return level\+Number.
 {\em level\+Number} & \\
 \hline
 \end{DoxyRetVals}
-\Hypertarget{tetris_leveling_8c_aeba70d21eab6f37620dbcc60a9de542a}\label{tetris_leveling_8c_aeba70d21eab6f37620dbcc60a9de542a} 
+\Hypertarget{tetris_leveling_8c_ae72ba64668f34137e4fe3886600662fe}\label{tetris_leveling_8c_ae72ba64668f34137e4fe3886600662fe} 
 \index{tetrisLeveling.c@{tetrisLeveling.c}!newLevelCalculate@{newLevelCalculate}}
 \index{newLevelCalculate@{newLevelCalculate}!tetrisLeveling.c@{tetrisLeveling.c}}
 \doxysubsubsection{\texorpdfstring{newLevelCalculate()}{newLevelCalculate()}}
-{\footnotesize\ttfamily void new\+Level\+Calculate (\begin{DoxyParamCaption}\item[{int}]{\+\_\+number\+Of\+Line\+Completed }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void new\+Level\+Calculate (\begin{DoxyParamCaption}\item[{uint8\+\_\+t}]{\+\_\+number\+Of\+Line\+Completed }\end{DoxyParamCaption})}
 
 
 
