--- a/doxygen docs/latex/tetris_leveling_8h_source.tex
+++ b/doxygen docs/latex/tetris_leveling_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{tetris\+Leveling.\+h}
-\hypertarget{tetris_leveling_8h_source}{}\label{tetris_leveling_8h_source}\index{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.h@{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.h}}
+\hypertarget{tetris_leveling_8h_source}{}\label{tetris_leveling_8h_source}\index{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.h@{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.h}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{/*}}
@@ -12,9 +12,11 @@
 \DoxyCodeLine{00008\ \textcolor{preprocessor}{\#ifndef\ TETRISLEVELING\_H\_}}
 \DoxyCodeLine{00009\ \textcolor{preprocessor}{\#define\ TETRISLEVELING\_H\_}}
 \DoxyCodeLine{00010\ }
-\DoxyCodeLine{00011\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{tetris_leveling_8c_a5e3d2774fadf7f769e1d4b5b50ca0752}{getLevelNumber}}();}
-\DoxyCodeLine{00012\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{tetris_leveling_8c_aeba70d21eab6f37620dbcc60a9de542a}{newLevelCalculate}}(\textcolor{keywordtype}{int});}
-\DoxyCodeLine{00013\ }
-\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ TETRISLEVELING\_H\_\ */}\textcolor{preprocessor}{}}
+\DoxyCodeLine{00011\ \textcolor{preprocessor}{\#include\ "{}main.h"{}}}
+\DoxyCodeLine{00012\ }
+\DoxyCodeLine{00013\ uint8\_t\ \mbox{\hyperlink{tetris_leveling_8c_acd58cbe3d18d5faa6ccd3a084881c296}{getLevelNumber}}();}
+\DoxyCodeLine{00014\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{tetris_leveling_8c_ae72ba64668f34137e4fe3886600662fe}{newLevelCalculate}}(uint8\_t);}
+\DoxyCodeLine{00015\ }
+\DoxyCodeLine{00016\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ TETRISLEVELING\_H\_\ */}\textcolor{preprocessor}{}}
 
 \end{DoxyCode}
