--- a/doxygen docs/latex/tetris_scoring_8c.tex
+++ b/doxygen docs/latex/tetris_scoring_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/kerfriden/\+Documents/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Scoring.c File Reference}
-\hypertarget{tetris_scoring_8c}{}\label{tetris_scoring_8c}\index{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.c@{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.c}}
+\doxysection{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Scoring.c File Reference}
+\hypertarget{tetris_scoring_8c}{}\label{tetris_scoring_8c}\index{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.c@{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.c}}
 
 
 \+: Program for Tetris Scoring system  
@@ -31,7 +31,7 @@ void {\bfseries print\+Score} ()
 \begin{DoxyCompactItemize}
 \item 
 \Hypertarget{tetris_scoring_8c_a2d73c8b076c07121e8d730fae3357d1e}\label{tetris_scoring_8c_a2d73c8b076c07121e8d730fae3357d1e} 
-uint32\+\_\+t {\bfseries tetris\+Score} = 100000
+uint32\+\_\+t {\bfseries tetris\+Score} = 0
 \item 
 \Hypertarget{tetris_scoring_8c_a1b2817eb8baad160de83e063b033c6bd}\label{tetris_scoring_8c_a1b2817eb8baad160de83e063b033c6bd} 
 uint8\+\_\+t {\bfseries piece\+Posee} = 100
