--- a/doxygen docs/latex/user_oled_8c.tex
+++ b/doxygen docs/latex/user_oled_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/kerfriden/\+Documents/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/user\+Oled.c File Reference}
-\hypertarget{user_oled_8c}{}\label{user_oled_8c}\index{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/userOled.c@{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/userOled.c}}
+\doxysection{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/user\+Oled.c File Reference}
+\hypertarget{user_oled_8c}{}\label{user_oled_8c}\index{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/userOled.c@{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/userOled.c}}
 
 
 \+: Others functions for Oled drawing  
@@ -22,7 +22,7 @@ void {\bfseries draw\+Game\+Over} ()
 \begin{DoxyCompactList}\small\item\em Plays the game\+Over Animation. \end{DoxyCompactList}\item 
 \Hypertarget{user_oled_8c_a305f138587ae309f2f0e2ba3ddd83796}\label{user_oled_8c_a305f138587ae309f2f0e2ba3ddd83796} 
 void {\bfseries draw\+Tetris\+Start\+Game} ()
-\begin{DoxyCompactList}\small\item\em Plays the Start\+Game Animation. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Plays the Start\+Menu Animation. \end{DoxyCompactList}\item 
 \Hypertarget{user_oled_8c_aaf80dc343615929a9d7ca23689b573e0}\label{user_oled_8c_aaf80dc343615929a9d7ca23689b573e0} 
 void {\bfseries clear\+Play\+Zone} ()
 \begin{DoxyCompactList}\small\item\em Clear the Play\+Zone. \end{DoxyCompactList}\item 
@@ -34,9 +34,15 @@ void \mbox{\hyperlink{user_oled_8c_a4a8b7e31c3fe86ea9f12dd3ba0745eb3}{ssd1306\+\
 \begin{DoxyCompactList}\small\item\em Déplace le curseur à sa position Verticale. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{user_oled_8c_a1b46f95cb32d9af8eca89bad57d18210}{tetris\+Bordure\+Decor}} (SSD1306\+\_\+\+COLOR color)
 \begin{DoxyCompactList}\small\item\em Draw the decor. \end{DoxyCompactList}\item 
-\Hypertarget{user_oled_8c_a47f2a4556f74dae06c5a3d030af8d636}\label{user_oled_8c_a47f2a4556f74dae06c5a3d030af8d636} 
-void {\bfseries draw\+Draw\+Start\+Menu} ()
-\begin{DoxyCompactList}\small\item\em Affiche les tetriminos en bas du Start\+Menu. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\Hypertarget{user_oled_8c_ae0744272d835bb6e1f8ef839bfd92a06}\label{user_oled_8c_ae0744272d835bb6e1f8ef839bfd92a06} 
+void {\bfseries draw\+Tetriminos} ()
+\begin{DoxyCompactList}\small\item\em Affiche les tetriminos en bas du Start\+Menu. \end{DoxyCompactList}\item 
+\Hypertarget{user_oled_8c_a9ecefd15a6fad87becac106fde8ca70f}\label{user_oled_8c_a9ecefd15a6fad87becac106fde8ca70f} 
+void {\bfseries Clignotement\+\_\+\+Ecran} ()
+\item 
+\Hypertarget{user_oled_8c_aec8e34e8d938666651abcd63389fb345}\label{user_oled_8c_aec8e34e8d938666651abcd63389fb345} 
+void {\bfseries Clignotement\+\_\+\+Click} ()
+\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
