--- a/doxygen docs/latex/tetris_game_8c.tex
+++ b/doxygen docs/latex/tetris_game_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/kerfriden/\+Documents/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Game.c File Reference}
-\hypertarget{tetris_game_8c}{}\label{tetris_game_8c}\index{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisGame.c@{C:/Users/kerfriden/Documents/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisGame.c}}
+\doxysection{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Game.c File Reference}
+\hypertarget{tetris_game_8c}{}\label{tetris_game_8c}\index{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisGame.c@{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisGame.c}}
 
 
 \+: Main program of the Tetris Game  
@@ -39,6 +39,9 @@ struct \mbox{\hyperlink{struct_t_e_t_r_a_m_i_n_o___a_t_m}{TETRAMINO\+\_\+\+ATM}}
 \item 
 \Hypertarget{tetris_game_8c_ac62481dbdcd378742c98abdd1d326e73}\label{tetris_game_8c_ac62481dbdcd378742c98abdd1d326e73} 
 \#define {\bfseries GAMEOVER\+\_\+\+STATE}~3
+\item 
+\Hypertarget{tetris_game_8c_ac80f56298756d54e0e7eb451df72176c}\label{tetris_game_8c_ac80f56298756d54e0e7eb451df72176c} 
+\#define {\bfseries START\+\_\+\+STATE}~4
 \end{DoxyCompactItemize}
 \doxysubsubsection*{Enumerations}
 \begin{DoxyCompactItemize}
@@ -79,6 +82,9 @@ void \mbox{\hyperlink{tetris_game_8c_ac30a0cd4694054e0c19ac09dd5f9771a}{move\+Do
 \begin{DoxyCompactList}\small\item\em Move all the stack above "{}start\+Line"{} down by one line. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{tetris_game_8c_a2ed5bd4d5ecf8d9597e80b61dad4f0e9}{random\+Piece}} (\mbox{\hyperlink{struct_t_e_t_r_a_m_i_n_o___a_t_m}{TETRAMINO\+\_\+\+ATM}} \texorpdfstring{$\ast$}{*}tetramino\+Atm)
 \begin{DoxyCompactList}\small\item\em Select a random piece among the tetraminos. \end{DoxyCompactList}\item 
+\Hypertarget{tetris_game_8c_ade063724957c75dd97f122a38e1ac92b}\label{tetris_game_8c_ade063724957c75dd97f122a38e1ac92b} 
+void {\bfseries tetris\+Init} ()
+\item 
 \Hypertarget{tetris_game_8c_aaf103d842e6d9f5524319094721d4268}\label{tetris_game_8c_aaf103d842e6d9f5524319094721d4268} 
 int {\bfseries tetris\+Game} ()
 \item 
@@ -114,7 +120,7 @@ int {\bfseries rotate\+Fall\+Delay} = 500
 int {\bfseries move\+Fall\+Delay} = 500
 \item 
 \Hypertarget{tetris_game_8c_a73f5e9d88fbbe86e97325c2ec617cebf}\label{tetris_game_8c_a73f5e9d88fbbe86e97325c2ec617cebf} 
-int {\bfseries user\+Input} =0
+int {\bfseries user\+Input} = 0
 \end{DoxyCompactItemize}
 
 
